# kie-avatar-studio

./: .env.example  .gitignore  .importlinter  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  quality_detector.py  requirements.txt  run.bat  run.sh
.github/: copilot-instructions.md
.github/agents/: code-quality-reviewer.agent.md
.github/skills/codegraph-sync/: SKILL.md
.github/skills/tui-designer/: SKILL.md
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
.opencode/agents/: code-quality-reviewer.md
.opencode/commands/: codegraph-sync.md
docs/: API_KIE.md  ARCHITECTURE.md  AUDIT_FLOWS_2026-06.md  CODE_QUALITY.md  RELEASE.md  ROADMAP.md  SPEC.md  VERSIONING.md
docs/adr/: 0001-async-stack.md  0002-sqlite-aiosqlite.md  0003-textual-tui.md  0004-layered-architecture-with-ports.md  0005-uploaded-images-store.md  0006-generated-audios-store.md  0007-audio-queue-and-generic-queue-manager.md  0008-video-from-existing-assets.md
docs/agents/: code-quality-reviewer.prompt.md
kie_avatar_studio/: __init__.py  __main__.py  app.py  config.py
kie_avatar_studio/app_layer/: __init__.py  audio_job_lifecycle.py  audio_job_runner.py  audio_player.py  audios_controller.py  batch_controller.py  clipboard.py  generated_images_controller.py  history_controller.py  ids.py  image_catalog_controller.py  image_job_lifecycle.py  image_job_runner.py  images_controller.py  job_executor.py  job_runner.py  keys_controller.py  limited_kie_gateway.py  log_reader.py  notification_bridge.py  polling.py  presets_controller.py  queue_manager.py  runner_factories.py  runtime_state_cleaner.py  settings_controller.py  system_opener.py  update_checker.py  veo_poller.py  video_job_lifecycle.py  videos_controller.py  visual_prompt_guard.py  workflow_base_resolver.py  workflow_concat.py  workflow_controller.py  workflow_execution_context.py  workflow_kie_helpers.py  workflow_lifecycle.py  workflow_runner.py  workflow_step_runner.py  (+1 more)
kie_avatar_studio/domain/: __init__.py  errors.py  events.py  kie_voice_catalog.py  models.py  policies.py  ports.py  workflow_artifacts.py
kie_avatar_studio/infra/: __init__.py  _streaming.py  _workflow_manifest_payload.py  _workflow_step_parser.py  audio_downloader.py  audio_jobs_db.py  audios_db.py  batch_loader.py  db.py  elevenlabs_client.py  env_writer.py  ffmpeg.py  generated_images_db.py  github_releases.py  image_jobs_db.py  images_db.py  keys_store.py  kie_client.py  logging.py  notifier.py  presets_store.py  workflow_db.py  workflow_loader.py  workflow_manifest_writer.py
kie_avatar_studio/ui/: __init__.py  _clipboard_feedback.py  _counters.py  _icons.py  _status_badges.py  _table_helpers.py  _text_format.py  menu.py  styles.tcss
kie_avatar_studio/ui/screens/: __init__.py  _configure_workflow_payload.py  _configure_workflow_widgets.py  _image_format.py  _preset_form_widgets.py  _settings_widgets.py  _video_format.py  _voice_changer_selector_form.py  _voice_changer_selector_options.py  _voice_changer_selector_widgets.py  _voice_language_options.py  _voice_settings_form.py  _workflow_format.py  _workflow_step_fields.py  audios.py  automation.py  batch.py  configure_workflow.py  edit_workflow_step.py  file_picker.py  generate_audio.py  generate_image.py  history.py  images.py  key_form.py  logs.py  main_menu.py  new_video.py  preset_form.py  presets.py  preview_base_image.py  queue.py  scene_image_approval.py  settings.py  upload_image.py  videos.py  voice_changer_selector.py  workflow_detail.py  workflow_summary.py
packaging/: entry.py  inno_setup.iss  kie_avatar_studio.spec
presets/: prompts.json  voices.json
scripts/: build_agent_profiles.sh  check.sh  check_agent_sync.sh  clean_runtime_state.py
tests/: conftest.py  test_agent_smoke.py  test_audio_downloader.py  test_audio_job_lifecycle.py  test_audio_job_model.py  test_audio_job_runner.py  test_audio_jobs_db.py  test_audio_player.py  test_audio_queue_wiring.py  test_audios_controller.py  test_audios_db.py  test_audios_screen.py  test_audios_screen_live.py  test_automation_product_retry.py  test_batch_controller.py  test_batch_loader.py  test_batch_screen.py  test_clipboard.py  test_clipboard_feedback.py  test_config.py  test_configure_workflow_screen.py  test_cross_queue_parallelism.py  test_db.py  test_edit_workflow_step_screen.py  test_elevenlabs_client.py  test_env_writer.py  test_errors.py  test_ffmpeg.py  test_file_picker.py  test_generated_audio.py  test_generated_images_controller.py  test_generated_images_db.py  test_github_releases.py  test_history_controller.py  test_history_screen.py  test_ids.py  test_image_catalog_controller.py  test_image_job_lifecycle.py  test_image_job_runner.py  test_image_jobs_db.py  (+60 more)
tests/agent_fixtures/: __init__.py  bad_feature.py  good_feature.py
workflows/: .gitkeep  000-SANITY-MATRIX-v2.json  135-HairLossSolution.json  136-Noeramicomida.json  README.md  SCHEMA.json  SCHEMA_REFERENCE.md  example_product_promo.json  example_video_creation_automation.json  new.json  valid.json
