[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kie-avatar-studio"
version = "2.0.1"
description = "TUI local en Python para automatizar generación de videos con Kie.ai (File Upload + ElevenLabs TTS + Kling Avatar Pro)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alberto Rosen-Tiehl" }]
dependencies = [
  "textual>=0.85",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "aiosqlite>=0.20",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
  "rich>=13.9",
  "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "import-linter>=2.0",
  "pre-commit>=3.7",
]

[project.scripts]
kie-avatar-studio = "kie_avatar_studio.__main__:main"

[tool.setuptools.packages.find]
include = ["kie_avatar_studio*"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "data", "outputs", "inputs", "logs", "batch_jobs", ".tmp"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",             # isort
  "UP",            # pyupgrade
  "B",             # flake8-bugbear
  "SIM",           # flake8-simplify
  "ASYNC",         # bloqueos en código async
  "PL",            # pylint subset
  "RUF",           # reglas de ruff
  "TID",           # tidy imports (mantiene TID251 banned-api)
  "PTH",           # pathlib en vez de os.path
  "S",             # bandit subset
  "N",             # naming
  "C90",           # complejidad ciclomática
]
ignore = [
  "E501",    # cubierto por formatter
  "PLR0913", # nº de args: lo controla CR-3.1 manualmente
  "TID252",  # imports relativos: el proyecto los usa por convención (capas)
  "PLC0415", # import dentro de función a veces es intencional (lazy)
]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",    # asserts OK en tests
  "S105",    # passwords hardcodeados de prueba
  "S106",    # idem
  "S107",    # idem (defaults de funciones helper en tests)
  "S108",    # /tmp en strings de prueba (no se crea archivo real)
  "PLR2004", # magic numbers en tests
  "TID251",  # time.sleep permitido para flushear hilos externos (loguru enqueue)
  "ASYNC",   # sync IO en fakes/stubs async de test (bytes contados, no bloquea)
]
"tests/agent_fixtures/**" = [
  # los fixtures *violan* reglas a propósito; el detector las marca.
  "S101", "S105", "S106", "S108", "S110",
  "PLR2004", "BLE001", "ASYNC230",
  "B007", "F401", "F811",
  "UP042",
  "TID251",  # banned-api: el fixture usa time.sleep adrede
]
"kie_avatar_studio/app.py" = ["PLR0915"]   # composition root puede ser más largo
"kie_avatar_studio/ui/screens/videos.py" = [
  "ASYNC240",  # `Path.is_file()` aceptable en handlers de botones de UI:
               # un stat sync no bloquea perceptiblemente y la alternativa
               # `anyio.Path` agregaría dependencia + cambio de tipo en
               # toda la cadena solo para un check antes de abrir el
               # reproductor del SO.
]
"quality_detector.py" = ["PLR2004"]        # tabla de literales del propio detector

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"requests".msg     = "Usa httpx async (CR-5.1)."
"time.sleep".msg   = "Usa asyncio.sleep (CR-5.1)."

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy (estricto sobre el paquete; tests más permisivos)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_decorators = true
plugins = ["pydantic.mypy"]
exclude = ["^(data|outputs|inputs|logs|batch_jobs|\\.venv)/"]

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
# Libs sin stubs maduros
module = ["aiosqlite", "aiosqlite.*", "textual.*", "loguru"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest + cobertura
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pydantic.*",
  # PytestUnraisableExceptionWarning: errores capturados desde `__del__` de
  # transports asyncio (subprocess que abrimos para `clipboard.py` con
  # `xclip`/`wl-copy` y de `audio_player.py` con el reproductor del SO).
  # El GC corre cuando Python desreferencia el objeto, AFTER del teardown
  # del test que lo usó. No es un bug real — el subprocess ya terminó y
  # el transport cerró su stream — pero pytest convierte el warning en
  # error de un test al azar siguiente. Ignorarlo evita falsos rojos.
  "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["kie_avatar_studio"]
branch = true
omit = ["kie_avatar_studio/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0   # se sube en CR-9.3 cuando haya features reales
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
